--- a/style.css
+++ b/style.css
@@ -10,8 +10,21 @@ body {
   background: linear-gradient(#fbb040, #f9ed32);
 }
 
-.grid-wrapper {
+.dashboard {
   display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: 10vh;
+}
+
+#btn-play i {
+  font-size: 3rem;
+  color: green;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   justify-content: center;
