--- a/style.css
+++ b/style.css
@@ -1,50 +1,29 @@
-* {
-  box-sizing: border-box;
-}
-
 body {
-  height: 100vh;
-  width: 100vw;
-
   margin: 0;
-  background: linear-gradient(#fbb040, #f9ed32);
+  background: linear-gradient(#393f4d, #1d1e22);
 }
 
-.dashboard {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  margin-bottom: 10vh;
+.main-grid .header,
+.main-grid footer {
+  background-color: #d4d4dc;
+}
+
+.main-grid .header h2 {
+  padding-left: 15px;
 }
 
 #btn-play i {
   font-size: 3rem;
-  color: green;
+  color: #feda6a;
 }
 
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.grid {
-  max-width: 800px;
-  width: 80%;
-  height: 50%;
-  display: grid;
-  margin: 0 auto;
-  grid-template-columns: repeat(2, 1fr);
-
-  grid-template-rows: auto;
-  grid-gap: 2rem;
-}
+/* .wrapper {
+  border: 5px solid #d4d4dc;
+  border-radius: 5px;
+} */
 
 .btn {
-  background-color: #c46d53;
+  background-color: #d4d4dc;
   border: none;
   border-radius: 5px;
   transition: all 0.5s;
@@ -52,12 +31,9 @@ body {
 
 .active {
   transform: scale(1.1);
-  background-color: #ef4136;
+  background-color: #feda6a;
 }
 
-@media (min-width: 450px) {
-  .grid {
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: auto;
-  }
+.main-grid .footer {
+  background-color: #d4d4dc;
 }
