--- a/style.css
+++ b/style.css
@@ -4,24 +4,33 @@
 
 body {
   margin: 0;
+  height: 2000px;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   background: linear-gradient(#393f4d, #1d1e22);
+  padding-bottom: 5rem;
 }
 
-.main-grid .header,
-.main-grid footer {
+.hide {
+  display: none !important;
+}
+
+.header {
+  margin: 0 auto;
+  width: 100%;
+  height: 4rem;
   background-color: #d4d4dc;
-}
-
-.main-grid .header {
   box-shadow: 0 5px 5px#1d1e22;
-}
-
-.main-grid .footer {
-  box-shadow: 0px -5px 5px #1d1e22;
 }
 
 #btn-play,
 #btn-stop {
+  margin: 0 auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,12 +50,26 @@ body {
   color: #feda6a;
 }
 
-.btn {
-  background-color: #d4d4dc;
+.dashboard {
+  margin: 5rem 0;
+}
+
+.tile {
+  max-width: 150px;
+  max-height: 150px;
+  width: 100%;
+  height: 100%;
+  /* background-color: #d4d4dc; */
   border: none;
   border-radius: 5px;
   transition: all 0.5s;
+
   box-shadow: var(--default-box-shadow);
+
+  background-image: url('./pics/2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .active {
@@ -54,10 +77,37 @@ body {
   background-color: #feda6a;
 }
 
-.main-grid .footer {
-  background-color: #d4d4dc;
+.grid {
+  min-height: 400px;
+  width: 70%;
+  height: 100%;
+  display: grid;
+  margin: auto 0;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: auto;
+
+  grid-gap: 2rem;
+
+  flex: 1;
 }
 
-.hide {
-  display: none !important;
+@media (min-width: 450px) {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+  }
+}
+
+@media (min-width: 750px) {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto;
+  }
+}
+
+@media (min-width: 1000px) {
+  .grid {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto;
+  }
 }
